--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 env:
   NDK: $ANDROID_NDK_LATEST_HOME
-  CMAKE: cmake
+  CMAKE: $(which cmake)
   TYPE: Debug
 
 jobs:
