--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,6 +24,8 @@ jobs:
         run: |
               CMAKE=$(which cmake)
               NDK=$ANDROID_NDK_LATEST_HOME
+              echo $ANDROID_NDK_LATEST_HOME
+              echo $NDK
               ./android/compile.sh all
 
 
