--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ "master" ]
 env:
-  NDK: NO_NDK_SET
+  NDK: NO_NDK_SET  # Must be here otherwise the var won't be set in the script
   CMAKE: cmake
   TYPE: Debug
 
@@ -25,8 +25,6 @@ jobs:
         run: |
               CMAKE=$(which cmake)
               NDK=$ANDROID_NDK_LATEST_HOME
-              echo $ANDROID_NDK_LATEST_HOME
-              echo $NDK
               ./android/compile.sh all
 
 
